# usbx

./: .gitignore  .readthedocs.yml  LICENSE  README.md  dev-requirements.txt  pyproject.toml
docs/: conf.py  contributing.rst  index.rst  platform-specific.rst  requirements.txt  user-guide.rst
docs/reference/: alternateinterface.rst  compositefunction.rst  configuration.rst  controltransfer.rst  device.rst  deviceregistry.rst  endpoint.rst  globals.rst  index.rst  interface.rst  recipient.rst  requesttype.rst  stallerror.rst  transferdirection.rst  transfertimeouterror.rst  transfertype.rst  usberror.rst  version.rst
examples/: enumerate.py  epaper.py  monitor.py  userguide.py
src/usbx/: __init__.py  configuration.py  controltransfer.py  device.py  enums.py  exceptions.py  registry.py  usb.py  version.py
src/usbx/_common/: confparser.py  ctypesfunc.py  devicebase.py  registrybase.py
src/usbx/_linux/: asynctransfer.py  ioctl.py  linuxdevice.py  linuxregistry.py  udev.py  usbdevfs.py
src/usbx/_macos/: corefoundation.py  iokit.py  macosdevice.py  macoserrors.py  macosregistry.py  transfertimeout.py
src/usbx/_windows/: deviceinfoset.py  kernel32.py  ole32.py  setupapi.py  user32.py  windevice.py  winerror.py  winregistry.py  winusb.py
tests/: base.py  configdescs.py  deviceconfig.py  test_abort.py  test_alternate.py  test_bulk_transfer.py  test_configuration.py  test_confparser.py  test_control_transfer.py  test_descriptors.py  test_device_info.py  test_enumeration.py  test_interrupt_transfer.py  test_open_device.py  test_stall.py  test_timeout.py  unplug.py
